updating for checking changes

--- a/test_page/contact_us.html
+++ b/test_page/contact_us.html
@@ -60,28 +60,27 @@
             </header>
             <div class="demo-ribbon"></div>
             <main class="demo-main mdl-layout__content">
-                <div class="demo-container mdl-grid">
-                    <!---------------------------- COLUMN 1 ------------------------------>
-                    <div class="mdl-cell mdl-cell--1-col  mdl-cell--hide-tablet mdl-cell--hide-phone text-xs-right">
+
+
+            <div class="row">
+              <div class="col-xs-3 col-xs-offset-9 col-sm-3 col-sm-offset-9 col-md-3 col-md-offset-9 col-lg-3 col-lg-offset-9" id="shortcut-button">
+
                         <div class="row">
-                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                                <!-- Colored FAB button with ripple -->
+                          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 text-xs-right">
                                 <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
                                 <i class="material-icons">mail</i>
                                 </button>
-                            </div>
-                        </div>
-                        <br>
-                        <br>
-                        <div class="row">
-                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                                <!-- Colored FAB button with ripple -->
+                          </div>
+                          <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
                                 <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
                                 <i class="material-icons">location_on</i>
                                 </button>
-                            </div>
+                          </div>
                         </div>
-                    </div> <!-- column 1 -->
+              </div>
+            </div>
+
+                <div class="demo-container mdl-grid">
 
                     <!-------------------------- COLUMN 2 -------------------->
                     <div class="demo-content mdl-color--white mdl-shadow--4dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
@@ -163,77 +162,63 @@
                     </div><!-- column 2 -->
 
                     <!-------------------------- column 3 -------------------->
-                    <div class="mdl-cell mdl-cell mdl-cell--3-col">
-                      <div class="demo-card-wide mdl-card mdl-shadow--2dp">
+                    <div class="mdl-cell mdl-cell mdl-cell--4-col">
+
+                    <div class="container-fluid">
+                      <div class="card  mdl-shadow--4dp">
+
+  <div class="card-block">
+    <h4 class="card-title">Reach Us Directly</h4>
+    <p class="card-text">9AM - 9PM (Mon-Sat)</p>
+  </div>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">
+                  <div class="row">
+                <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+                    <i class="material-icons">contact_phone</i>
+                </div>
+                <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
+                    <a href="tel:+917406112211">+91 7406 11 22 11</a>
+                </div>
+            </div>
+    </li>
+    <li class="list-group-item">
+                  <div class="row">
+                <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+                    <i class="material-icons">contact_phone</i>
+                </div>
+                <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
+                    <a href="tel:+917406112211">+91 7406 33 44 55</a>
+                </div>
+            </div>
+    </li>
+    <li class="list-group-item">
+            <div class="row">
+                <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+                    <i class="material-icons">near_me</i>
+                </div>
+                <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
+                    #2/1A, 10th Main Road, Indira Nagar, Bangalore
+                </div>
+            </div>
+    </li>
+    <li class="list-group-item">
+            <div class="row">
+                <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+                    <i class="material-icons">mail</i>
+                </div>
+                <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
+                    <a href="mailto:hello@cozee.in?subject=feedback" "email me">hello@cozee.in</a>
+                </div>
+            </div>
+    </li>
+
+  </ul>
+</div>
+                    </div>
 
 
-                        <div class="row" id="shortcut-button">
-                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-xs-right">
-                                <!-- Colored FAB button with ripple -->
-                                <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
-                                <i class="material-icons">mail</i>
-                                </button>
 
-                                <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
-                                <i class="material-icons">location_on</i>
-                                </button>
-                            </div>
-                        </div>
-
-
-                                    <div class="mdl-card__title">
-                                        <h2 class="mdl-card__title-text">Ask Us Directly</h2>
-                                    </div>
-                                    <div class="mdl-card__supporting-text">
-                                        9AM - 9PM (Mon-Sat)
-                                    </div>
-                                    <!-- 1 -->
-                                    <div class="mdl-card__actions mdl-card--border">
-                                        <div class="row">
-                                            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 text-xs-right">
-                                                <i class="material-icons">contact_phone</i>
-                                            </div>
-                                            <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
-                                                <a href="tel:+917406112211">+91 7406 11 22 11</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <!-- 2 -->
-                                    <div class="mdl-card__actions mdl-card--border">
-                                        <div class="row">
-                                            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 text-xs-right">
-                                                <i class="material-icons">contact_phone</i>
-                                            </div>
-                                            <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
-                                                <a href="tel:+917406112211">+91 7406 33 44 55</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <!-- 3 -->
-                                    <div class="mdl-card__actions mdl-card--border">
-                                        <div class="row">
-                                            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 text-xs-right">
-                                                <i class="material-icons">near_me</i>
-                                            </div>
-                                            <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
-                                                #2/1A, 10th Main Road, Indira Nagar, Bangalore
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <!-- 4 -->
-                                    <div class="mdl-card__actions mdl-card--border">
-                                        <div class="row">
-                                            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 text-xs-right">
-                                                <i class="material-icons">mail</i>
-                                            </div>
-                                            <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
-                                                <a href="mailto:hello@cozee.in?subject=feedback" "email me">hello@cozee.in</a>
-                                            </div>
-                                        </div>
-                                    </div>
-
-
-                            </div>
                         </div> <!-- column 3 -->
                 </div>
                 <!-- container -->
