--- a/test_page/career.html
+++ b/test_page/career.html
@@ -200,7 +200,8 @@
 
     </div>
 
-    <!------------------------- Job opening -------------------------->
+    <!----------------------- Job opening -------------------------->
+
     <div id="slide-5">
 
         <div class="row slide-heading" id="slide-5-heading" style="margin-left: 0px !important;margin-right: 0px !important;">
@@ -293,6 +294,88 @@
 
         </div>
     </div>
+
+
+    <!---------------------  New Job opening slide ---------------------->
+
+    <div id="slide-6">
+    <!-- Slide heading -->
+        <div class="row slide-heading" id="slide-5-heading" style="margin-left: 0px !important;margin-right: 0px !important;">
+            <div class="text-xs-center
+                        col-xs-12 col-xs-offset-0
+                        col-sm-10 col-sm-offset-1
+                        col-md-8 col-md-offset-2
+                        col-lg-8 col-lg-offset-2
+                        col-xl-6 col-xl-offset-3">
+                <h2> Interested? We’re hiring. </h2>
+<!--                 <h5>Our team shares a passion for software engineering, user-centered design, data visualization, and business optimization. If you think you’re a good fit, check out the open positions below.</h5> -->
+
+            </div>
+        </div>
+
+        <!-- slide content -->
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                    <img src="https://placehold.it/340x450&txt=join_us_photo" class="img-responsive" alt="Image">
+                </div>
+                <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+
+                    <div class="row">
+                        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                            <div class="card">
+                              <h3 class="card-header">Engineering</h3>
+                              <div class="card-block">
+                                <p class="card-text">
+                                    <ul class="list-group">
+                                      <li class="list-group-item">Front-End Developer</li>
+                                      <li class="list-group-item">Back-End Developer</li>
+                                    </ul>
+                                </p>
+                              </div>
+                            </div>
+                        </div>
+
+                        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                            <div class="card">
+                              <h3 class="card-header">Management</h3>
+                              <div class="card-block">
+                                <p class="card-text">
+                                    <ul class="list-group">
+                                      <li class="list-group-item">Account Manager</li>
+                                    </ul>
+                                </p>
+                              </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="row">
+                        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                              <div class="card card-block">
+                                <h4 class="card-title">Engineering</h4>
+                                <p class="card-text text-xs-right">Front-End Developer</p>
+                                <p class="card-text  text-xs-right">Back-End Developer</p>
+                              </div>
+                        </div>
+
+                        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                        <div class="card card-block">
+                                <h4 class="card-title" style="color:#DA433E;">Engineering</h4>
+                                <p class="card-text text-xs-right">Front-End Developer</p>
+                                <p class="card-text  text-xs-right">Back-End Developer</p>
+                              </div>
+                        </div>
+                    </div>
+
+
+
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!---------------------------- Script Files -------------------------->
 
     <!-- Fix for uncaught error for tether.js -->
