updating for checking changes

--- a/test_page/career.html
+++ b/test_page/career.html
@@ -320,32 +320,19 @@
                     <img src="https://placehold.it/340x450&txt=join_us_photo" class="img-responsive" alt="Image">
                 </div>
                 <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
-
                     <div class="row">
                         <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                            <div class="card">
-                              <h3 class="card-header">Engineering</h3>
-                              <div class="card-block">
-                                <p class="card-text">
-                                    <ul class="list-group">
-                                      <li class="list-group-item">Front-End Developer</li>
-                                      <li class="list-group-item">Back-End Developer</li>
-                                    </ul>
-                                </p>
-                              </div>
+                            <div class="card card-block job-card">
+                                    <h4 class="card-title slide-6-card-heading">Engineering</h4>
+                                    <p class="card-text text-xs-left job-opening-text"><a href="jobform.html" title="click to see job description">Front-End Developer</a></p>
+                                    <p class="card-text text-xs-left job-opening-text"><a href="jobform.html" title="click to see job description">Back-End Developer</a></p>
                             </div>
                         </div>
 
                         <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                            <div class="card">
-                              <h3 class="card-header">Management</h3>
-                              <div class="card-block">
-                                <p class="card-text">
-                                    <ul class="list-group">
-                                      <li class="list-group-item">Account Manager</li>
-                                    </ul>
-                                </p>
-                              </div>
+                            <div class="card card-block job-card">
+                                    <h4 class="card-title slide-6-card-heading">Management</h4>
+                                    <p class="card-text text-xs-left job-opening-text"><a href="jobform.html" title="click to see job description">Account Manager</a></p>
                             </div>
                         </div>
                     </div>
@@ -353,26 +340,39 @@
 
                     <div class="row">
                         <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                              <div class="card card-block">
-                                <h4 class="card-title">Engineering</h4>
-                                <p class="card-text text-xs-right">Front-End Developer</p>
-                                <p class="card-text  text-xs-right">Back-End Developer</p>
-                              </div>
+                            <div class="card card-block job-card">
+                                    <h4 class="card-title slide-6-card-heading">Others</h4>
+                                    <p class="card-text text-xs-left job-opening-text"><a href="jobform.html" title="click to see job description">Customer Relationship Associate</a></p>
+                            </div>
                         </div>
 
                         <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                        <div class="card card-block">
-                                <h4 class="card-title" style="color:#DA433E;">Engineering</h4>
-                                <p class="card-text text-xs-right">Front-End Developer</p>
-                                <p class="card-text  text-xs-right">Back-End Developer</p>
-                              </div>
                         </div>
                     </div>
+                </div>
+            </div>
 
+            <div class="row job-nojob" style="margin-left: 0px !important;margin-right: 0px !important;">
+                <div class="hidden-md-down col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
+                    <p> Think you might be a good fit but don’t see your role listed here? We’d love to hear about what you can bring to our team. Please send a cover letter & resume to <a href="mailto:careers@cozee.in?subject=feedback" "email me">careers@cozee.in</a>
+                    </p>
+                </div>
+            </div>
 
+            <div class="row" style="margin-left: 0px !important;margin-right: 0px !important;">
+                <div class="hidden-md-up col-xs-12 col-sm-12">
+
+                    <div class="card card-inverse job-extra text-xs-center">
+                        <div class="card-block">
+                            <p>Think you might be a good fit but don’t see your role listed here? We’d love to hear about what you can bring to our team. Please send a cover letter & resume to <a href="mailto:careers@cozee.in?subject=feedback" "email me">careers@cozee.in</a>
+                            </p>
+                        </div>
+                    </div>
 
                 </div>
             </div>
+
+
         </div>
     </div>
 
