--- a/test_page/career.html
+++ b/test_page/career.html
@@ -316,12 +316,12 @@
         <!-- slide content -->
         <div class="container">
             <div class="row">
-                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                <div class="hidden-sm-down col-md-4 col-lg-4">
                     <img src="https://placehold.it/340x450&txt=join_us_photo" class="img-responsive" alt="Image">
                 </div>
-                <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+                <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
                     <div class="row">
-                        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                             <div class="card card-block job-card">
                                     <h4 class="card-title slide-6-card-heading">Engineering</h4>
                                     <p class="card-text text-xs-left job-opening-text"><a href="jobform.html" title="click to see job description">Front-End Developer</a></p>
@@ -329,7 +329,7 @@
                             </div>
                         </div>
 
-                        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                             <div class="card card-block job-card">
                                     <h4 class="card-title slide-6-card-heading">Management</h4>
                                     <p class="card-text text-xs-left job-opening-text"><a href="jobform.html" title="click to see job description">Account Manager</a></p>
@@ -339,14 +339,14 @@
 
 
                     <div class="row">
-                        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                             <div class="card card-block job-card">
                                     <h4 class="card-title slide-6-card-heading">Others</h4>
                                     <p class="card-text text-xs-left job-opening-text"><a href="jobform.html" title="click to see job description">Customer Relationship Associate</a></p>
                             </div>
                         </div>
 
-                        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                         </div>
                     </div>
                 </div>
