--- a/test_page/career.html
+++ b/test_page/career.html
@@ -315,12 +315,12 @@
 
         <!-- slide content -->
         <div class="container">
-            <div class="row">
+            <div class="row  better-row">
                 <div class="hidden-sm-down col-md-4 col-lg-4">
                     <img src="https://placehold.it/340x450&txt=join_us_photo" class="img-responsive" alt="Image">
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
-                    <div class="row">
+                    <div class="row  better-row">
                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                             <div class="card card-block job-card">
                                     <h4 class="card-title slide-6-card-heading">Engineering</h4>
@@ -338,7 +338,7 @@
                     </div>
 
 
-                    <div class="row">
+                    <div class="row  better-row">
                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                             <div class="card card-block job-card">
                                     <h4 class="card-title slide-6-card-heading">Others</h4>
@@ -352,14 +352,14 @@
                 </div>
             </div>
 
-            <div class="row job-nojob" style="margin-left: 0px !important;margin-right: 0px !important;">
+            <div class="row job-nojob better-row">
                 <div class="hidden-md-down col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
                     <p> Think you might be a good fit but don’t see your role listed here? We’d love to hear about what you can bring to our team. Please send a cover letter & resume to <a href="mailto:careers@cozee.in?subject=feedback" "email me">careers@cozee.in</a>
                     </p>
                 </div>
             </div>
 
-            <div class="row" style="margin-left: 0px !important;margin-right: 0px !important;">
+            <div class="row better-row">
                 <div class="hidden-md-up col-xs-12 col-sm-12">
 
                     <div class="card card-inverse job-extra text-xs-center">
