updating for checking changes

--- a/test_page/career.html
+++ b/test_page/career.html
@@ -300,14 +300,14 @@
 
     <div id="slide-6">
     <!-- Slide heading -->
-        <div class="row slide-heading" id="slide-5-heading" style="margin-left: 0px !important;margin-right: 0px !important;">
+        <div class="row slide-heading  better-row" id="slide-5-heading">
             <div class="text-xs-center
                         col-xs-12 col-xs-offset-0
                         col-sm-10 col-sm-offset-1
                         col-md-8 col-md-offset-2
                         col-lg-8 col-lg-offset-2
                         col-xl-6 col-xl-offset-3">
-                <h2> Interested? We’re hiring. </h2>
+                <h2 class="text-nowrap"> Interested? We’re hiring. </h2>
 <!--                 <h5>Our team shares a passion for software engineering, user-centered design, data visualization, and business optimization. If you think you’re a good fit, check out the open positions below.</h5> -->
 
             </div>
