--- a/test_page/career.html
+++ b/test_page/career.html
@@ -175,10 +175,10 @@
                         <img id="staff1thumbnail" src="image/staff1.jpg" class="img-thumbnail img-responsive slide-4-staff" onclick="showStaff(1);" alt="staff 1">
                     </div>
                     <div class="row staff-thumbnail">
-                        <img id="staff2thumbnail" src="image/staff2.jpg" class="img-thumbnail img-responsive slide-4-staff" onclick="showStaff(2);" alt="staff 1">
+                        <img id="staff2thumbnail" src="image/staff2.jpg" class="img-thumbnail img-responsive slide-4-staff" onclick="showStaff(2);" alt="staff 2">
                     </div>
                     <div class="row  staff-thumbnail">
-                        <img id="staff3thumbnail" src="image/staff3.jpg" class="img-thumbnail img-responsive slide-4-staff" onclick="showStaff(3);" alt="staff 1">
+                        <img id="staff3thumbnail" src="image/staff3.jpg" class="img-thumbnail img-responsive slide-4-staff" onclick="showStaff(3);" alt="staff 3">
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
@@ -308,7 +308,7 @@
                         col-lg-8 col-lg-offset-2
                         col-xl-6 col-xl-offset-3">
                 <h2 class="text-nowrap"> Interested? We’re hiring. </h2>
-<!--                 <h5>Our team shares a passion for software engineering, user-centered design, data visualization, and business optimization. If you think you’re a good fit, check out the open positions below.</h5> -->
+                <h5>Our team shares a passion for software engineering, user-centered design, data visualization, and business optimization.</h5>
 
             </div>
         </div>
