updating for checking changes

--- a/test_page/career.html
+++ b/test_page/career.html
@@ -309,7 +309,6 @@
                         col-xl-6 col-xl-offset-3">
                 <h2 class="text-nowrap"> Interested? We’re hiring. </h2>
                 <h5>Our team shares a passion for software engineering, user-centered design, data visualization, and business optimization.</h5>
-
             </div>
         </div>
 
@@ -333,6 +332,7 @@
                             <div class="card card-block job-card">
                                     <h4 class="card-title slide-6-card-heading">Management</h4>
                                     <p class="card-text text-xs-left job-opening-text"><a href="jobform.html" title="click to see job description">Account Manager</a></p>
+                                    <p class="card-text text-xs-left job-opening-text">&nbsp;</p>
                             </div>
                         </div>
                     </div>
@@ -341,12 +341,17 @@
                     <div class="row  better-row">
                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                             <div class="card card-block job-card">
-                                    <h4 class="card-title slide-6-card-heading">Others</h4>
+                                    <h4 class="card-title slide-6-card-heading">Operations</h4>
                                     <p class="card-text text-xs-left job-opening-text"><a href="jobform.html" title="click to see job description">Customer Relationship Associate</a></p>
+                                    <p class="card-text text-xs-left job-opening-text">&nbsp;</p>
                             </div>
                         </div>
-
                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                            <div class="card card-block job-card">
+                                        <h4 class="card-title slide-6-card-heading">Internship</h4>
+                                        <p class="card-text text-xs-left job-opening-text"><a href="jobform.html" title="click to see job description">Front-End Developer</a></p>
+                                        <p class="card-text text-xs-left job-opening-text">&nbsp;</p>
+                                </div>
                         </div>
                     </div>
                 </div>
