--- a/test_page/jobform.html
+++ b/test_page/jobform.html
@@ -67,8 +67,8 @@
 
         <main class="job-main mdl-layout__content">
             <div class="job-container mdl-grid">
-                <div class="mdl-cell mdl-cell--1-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-                <div class="job-content mdl-color--white mdl-shadow--4dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+                <!-- <div class="mdl-cell mdl-cell--1-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div> -->
+                <div class="job-content mdl-color--white mdl-shadow--4dp content mdl-color-text--grey-800 mdl-cell mdl-cell--9-col">
                     <div class="job-crumbs mdl-color-text--grey-500 text-nowrap">
                         Cozee &gt; Careers &gt; Software Development Engineer
                     </div>
