--- a/test_page/jobform.html
+++ b/test_page/jobform.html
@@ -286,7 +286,7 @@ Apply<!--  for this position -->
                 <div class="mdl-cell mdl-cell--3-col  mdl-cell--hide-tablet mdl-cell--hide-phone" style="">
 
                     <div class="job-card-square mdl-card mdl-shadow--2dp">
-                        <div class="mdl-card__title mdl-card--expand">
+                        <div class="mdl-card__title">
                             <h2 class="mdl-card__title-text">Current Job Openings</h2>
                         </div>
 
@@ -319,21 +319,6 @@ Apply<!--  for this position -->
                 </div>
 
             </div>
-
-
-            <footer class="job-footer mdl-mini-footer">
-                <div class="mdl-mini-footer--left-section">
-                    <ul class="mdl-mini-footer--link-list">
-                        <li><a href="#"><strong>COZEE</strong></a>
-                        </li>
-                        <li><a href="#">Home</a>
-                        </li>
-                        <li><a href="#">Contact us</a>
-                        </li>
-                    </ul>
-                </div>
-            </footer>
-
         </main>
 
     </div>
