updating for checking changes

--- a/test_page/jobform.html
+++ b/test_page/jobform.html
@@ -174,7 +174,7 @@ Apply<!--  for this position -->
                     <div id="iform">
                         <hr>
                         <div class="row better-row">
-                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-10 col-lg-offset-1 jf">
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 jf">
                                 <form action="mailDetails.php" name="jobForm" method="POST" id="jobForm">
                                     <div class="page-header">
                                         <h4>Apply for this job <small class="pull-xs-right"><span class="required-field-mark">*</span>Required</small></h4>
@@ -310,12 +310,7 @@ Apply<!--  for this position -->
 
                         <div class="mdl-card__actions mdl-card--border">
                             <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect other-job-link">
-      Customer Relationship Associate
-    </a>
-                        </div>
-                        <div class="mdl-card__actions mdl-card--border">
-                            <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect other-job-link">
-      Intern
+      Customer Relationship
     </a>
                         </div>
 
