updating for checking changes

--- a/test_page/jobform.html
+++ b/test_page/jobform.html
@@ -77,7 +77,7 @@
                   <li class="active">Software Development Engineer</li>
                 </ol>
 
-                    <div class="row">
+                    <div class="row better-row">
                         <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
 <span class="job-heading">Software Development Engineer</span><!-- Accent-colored raised button with ripple -->
 
