--- a/test_page/jobform.html
+++ b/test_page/jobform.html
@@ -314,6 +314,12 @@ Apply<!--  for this position -->
     </a>
                         </div>
 
+                        <div class="mdl-card__actions mdl-card--border">
+                            <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect other-job-link">
+      Internship
+    </a>
+                        </div>
+
                     </div>
 
                 </div>
