--- a/test_page/contact_us.html
+++ b/test_page/contact_us.html
@@ -67,14 +67,14 @@
 
                         <div class="row">
                           <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 text-xs-right">
-                                <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
+                                <a href="#contactForm" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
                                 <i class="material-icons">mail</i>
-                                </button>
+                                </a>
                           </div>
                           <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-                                <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
+                                <a href="#locateUs" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
                                 <i class="material-icons">location_on</i>
-                                </button>
+                                </a>
                           </div>
                         </div>
               </div>
@@ -156,7 +156,7 @@
                         </div>
                         <br><br>
                         <!-- Map Header -->
-                        <div class="row better-row">
+                        <div class="row better-row" id="locateUs">
                             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 demo-heading">
                                 Locate Us
                             </div>
